update: added more metric

--- a/.env.test
+++ b/.env.test
@@ -13,6 +13,8 @@ AWS_DEFAULT_REGION=localhost
 # For EventBridge
 
 MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_RULE_NAME=madara-orchestrator-worker-trigger
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_ROLE_NAME=madara-orchestrator-worker-trigger-role
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_POLICY_NAME=madara-orchestrator-worker-trigger-policy
 
 
 
@@ -97,7 +99,6 @@ MADARA_ORCHESTRATOR_AWS_S3_BUCKET_NAME=madara-orchestrator-test-bucket
 ## OTEL ##
 
 MADARA_ORCHESTRATOR_OTEL_SERVICE_NAME=orchestrator
-
 
 #### SERVER ####
 
