update: fixed location constraint

--- a/.env.test
+++ b/.env.test
@@ -3,8 +3,7 @@
 
 AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
-AWS_REGION=us-east-1
-MADARA_ORCHESTRATOR_AWS_BUCKET_LOCATION_CONSTRAINT=us-west-1
+AWS_REGION=us-west-1
 # For Aws sdk
 AWS_ENDPOINT_URL=http://localhost.localstack.cloud:4566
 # For Omniqueue
@@ -20,7 +19,7 @@ MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_POLICY_NAME=madara-orchestrator-worker-
 
 #### ALERTS ####
 
-MADARA_ORCHESTRATOR_AWS_SNS_ARN=arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn
+MADARA_ORCHESTRATOR_AWS_SNS_ARN=arn:aws:sns:us-west-1:000000000000:madara-orchestrator-arn
 
 
 #### DATA AVAILABILITY ####
@@ -67,7 +66,7 @@ MADARA_ORCHESTRATOR_ATLANTIC_RPC_NODE_URL=http://127.0.0.1:8545
 MADARA_ORCHESTRATOR_SQS_PREFIX=madara_orchestrator
 MADARA_ORCHESTRATOR_SQS_SUFFIX=queue
 MADARA_ORCHESTRATOR_EVENT_BRIDGE_TARGET_QUEUE_NAME=madara_orchestrator_worker_trigger_queue
-MADARA_ORCHESTRATOR_SQS_BASE_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000
+MADARA_ORCHESTRATOR_SQS_BASE_QUEUE_URL=http://sqs.us-west-1.localhost.localstack.cloud:4566/000000000000
 
 #### SETTLEMENT ####
 
