--- a/.env.example
+++ b/.env.example
@@ -1,77 +1,88 @@
-##### ORCHESTRATOR #####
+#### AWS CONFIG ####
+AWS_ACCESS_KEY_ID=                    # Your AWS access key ID
+AWS_SECRET_ACCESS_KEY=                # Your AWS secret access key
+AWS_REGION=                          # AWS region
+# For AWS SDK
+AWS_ENDPOINT_URL=                    # AWS endpoint URL
+# For Omniqueue
+AWS_DEFAULT_REGION=                  # AWS default region
 
-MADARA_ORCHESTRATOR_HOST=
-MADARA_ORCHESTRATOR_PORT=
-MADARA_ORCHESTRATOR_MAX_BLOCK_NO_TO_PROCESS=
+# For EventBridge
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_RULE_NAME=       # EventBridge rule name
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_ROLE_NAME=       # EventBridge role name
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_POLICY_NAME=     # EventBridge policy name
 
-##### AWS CONFIG #####
+#### ALERTS ####
+MADARA_ORCHESTRATOR_AWS_SNS_ARN=     # SNS ARN for alerts
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+#### DATA AVAILABILITY ####
+## ETHEREUM ##
+MADARA_ORCHESTRATOR_ETHEREUM_DA_RPC_URL=   # Ethereum RPC URL for data availability
 
-##### Omniqueue #####
+#### DATABASE ####
+## MONGODB ##
+MADARA_ORCHESTRATOR_MONGODB_CONNECTION_URL=   # MongoDB connection URL
+MADARA_ORCHESTRATOR_DATABASE_NAME=            # MongoDB database name
 
-AWS_DEFAULT_REGION="localhost"
+#### PROVER ####
+## SHARP ##
+MADARA_ORCHESTRATOR_SHARP_CUSTOMER_ID=        # SHARP customer ID
+MADARA_ORCHESTRATOR_SHARP_URL=                # SHARP service URL
+MADARA_ORCHESTRATOR_SHARP_USER_CRT=           # SHARP user certificate
+MADARA_ORCHESTRATOR_SHARP_USER_KEY=           # SHARP user private key
+MADARA_ORCHESTRATOR_SHARP_SERVER_CRT=         # SHARP server certificate
+MADARA_ORCHESTRATOR_SHARP_RPC_NODE_URL=       # SHARP RPC node URL
+MADARA_ORCHESTRATOR_SHARP_PROOF_LAYOUT=       # SHARP proof layout
+MADARA_ORCHESTRATOR_GPS_VERIFIER_CONTRACT_ADDRESS=   # GPS verifier contract address
 
-##### STORAGE #####
+## ATLANTIC ##
+MADARA_ORCHESTRATOR_ATLANTIC_API_KEY=         # Atlantic API key
+MADARA_ORCHESTRATOR_ATLANTIC_SERVICE_URL=     # Atlantic service URL
+MADARA_ORCHESTRATOR_ATLANTIC_MOCK_FACT_HASH=  # Whether to use mock fact registry (true/false)
+MADARA_ORCHESTRATOR_ATLANTIC_PROVER_TYPE=     # Prover type (herodotus/starkware)
+MADARA_ORCHESTRATOR_ATLANTIC_SETTLEMENT_LAYER= # Settlement layer (ethereum/starknet)
+MADARA_ORCHESTRATOR_ATLANTIC_VERIFIER_CONTRACT_ADDRESS=  # Atlantic verifier contract address
+MADARA_ORCHESTRATOR_ATLANTIC_RPC_NODE_URL=    # Atlantic RPC node URL
 
-DATA_STORAGE=
-MADARA_ORCHESTRATOR_AWS_S3_BUCKET_NAME=
+#### QUEUE ####
+## AWS SQS ##
+MADARA_ORCHESTRATOR_SQS_PREFIX=               # SQS queue prefix
+MADARA_ORCHESTRATOR_SQS_SUFFIX=               # SQS queue suffix
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TARGET_QUEUE_NAME=  # EventBridge target queue name
+MADARA_ORCHESTRATOR_SQS_BASE_QUEUE_URL=      # SQS base queue URL
 
-##### QUEUE #####
+#### SETTLEMENT ####
+## ETHEREUM ##
+MADARA_ORCHESTRATOR_ETHEREUM_SETTLEMENT_RPC_URL=  # Ethereum settlement RPC URL
+MADARA_ORCHESTRATOR_ETHEREUM_PRIVATE_KEY=         # Ethereum private key
+MADARA_ORCHESTRATOR_L1_CORE_CONTRACT_ADDRESS=     # L1 core contract address
+MADARA_ORCHESTRATOR_STARKNET_OPERATOR_ADDRESS=    # Starknet operator address
 
-QUEUE_PROVIDER=
-SQS_JOB_PROCESSING_QUEUE_URL=
-SQS_JOB_VERIFICATION_QUEUE_URL=
-SQS_JOB_HANDLE_FAILURE_QUEUE_URL=
-SQS_WORKER_TRIGGER_QUEUE_URL=
+## STARKNET ##
+MADARA_ORCHESTRATOR_STARKNET_SETTLEMENT_RPC_URL=  # Starknet settlement RPC URL
+MADARA_ORCHESTRATOR_STARKNET_PRIVATE_KEY=         # Starknet private key
+MADARA_ORCHESTRATOR_STARKNET_ACCOUNT_ADDRESS=     # Starknet account address
+MADARA_ORCHESTRATOR_STARKNET_CAIRO_CORE_CONTRACT_ADDRESS=  # Starknet Cairo core contract address
+MADARA_ORCHESTRATOR_STARKNET_FINALITY_RETRY_WAIT_IN_SECS=  # Retry wait time in seconds
+# MADARA_ORCHESTRATOR_MADARA_BINARY_PATH=          # Optional: Madara binary path
 
-##### SNS #####
+#### STORAGE ####
+## AWS S3 ##
+MADARA_ORCHESTRATOR_AWS_S3_BUCKET_NAME=      # S3 bucket name
 
-ALERTS="sns"
-MADARA_ORCHESTRATOR_AWS_SNS_ARN="arn:aws:sns:us-east-1:000000000000:madara-orchestrator-arn"
+#### INSTRUMENTATION ####
+## OTEL ##
+MADARA_ORCHESTRATOR_OTEL_SERVICE_NAME=       # OpenTelemetry service name
+MADARA_ORCHESTRATOR_OTES_COLLECTOR_ENDPOINT= # OpenTelemetry collector endpoint
 
-##### DATABASE #####
+#### SERVER ####
+MADARA_ORCHESTRATOR_HOST=                    # Server host
+MADARA_ORCHESTRATOR_PORT=                    # Server port
 
-DATABASE=
-MADARA_ORCHESTRATOR_MONGODB_CONNECTION_URL=
-MADARA_ORCHESTRATOR_DATABASE_NAME=
+#### SERVICE ####
+MADARA_ORCHESTRATOR_MAX_BLOCK_NO_TO_PROCESS=  # Maximum block number to process (optional)
+MADARA_ORCHESTRATOR_MIN_BLOCK_NO_TO_PROCESS=  # Minimum block number to process (optional)
+MADARA_ORCHESTRATOR_MADARA_RPC_URL=           # Madara RPC URL
 
-##### PROVER #####
-
-PROVER_SERVICE=
-
-## if using sharp
-MADARA_ORCHESTRATOR_SHARP_CUSTOMER_ID=
-MADARA_ORCHESTRATOR_SHARP_URL=
-MADARA_ORCHESTRATOR_SHARP_USER_CRT=
-MADARA_ORCHESTRATOR_SHARP_USER_KEY=
-MADARA_ORCHESTRATOR_SHARP_SERVER_CRT=
-MADARA_ORCHESTRATOR_SHARP_PROOF_LAYOUT=
-
-
-## if using atlantic
-MADARA_ORCHESTRATOR_ATLANTIC_API_KEY=
-MADARA_ORCHESTRATOR_ATLANTIC_URL=
-MADARA_ORCHESTRATOR_MOCK_FACT_HASH=
-MADARA_ORCHESTRATOR_PROVER_TYPE=
-
-##### ON CHAIN CONFIG #####
-
-DA_LAYER=
-SETTLEMENT_LAYER=
-MADARA_ORCHESTRATOR_ETHEREUM_SETTLEMENT_RPC_URL=
-MADARA_ORCHESTRATOR_MADARA_RPC_URL=
-MADARA_ORCHESTRATOR_GPS_VERIFIER_CONTRACT_ADDRESS=
-PRIVATE_KEY=
-MADARA_ORCHESTRATOR_ETHEREUM_PRIVATE_KEY=
-MADARA_ORCHESTRATOR_L1_CORE_CONTRACT_ADDRESS=
-
-##### STARKNET SETTLEMENT (L3s) #####
-MADARA_ORCHESTRATOR_STARKNET_PRIVATE_KEY=
-MADARA_ORCHESTRATOR_STARKNET_ACCOUNT_ADDRESS=
-
-##### Instrumentation #####
-MADARA_ORCHESTRATOR_OTEL_SERVICE_NAME=
-MADARA_ORCHESTRATOR_OTEL_COLLECTOR_ENDPOINT=
+#### SNOS ####
+MADARA_ORCHESTRATOR_RPC_FOR_SNOS=             # SNOS RPC URL
