refactor: event bridge type added

--- a/.env.test
+++ b/.env.test
@@ -10,7 +10,7 @@ AWS_ENDPOINT_URL=http://localhost.localstack.cloud:4566
 AWS_DEFAULT_REGION=localhost
 
 # For EventBridge
-
+MADARA_ORCHESTRATOR_EVENT_BRIDGE_TYPE=rule
 MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_RULE_NAME=madara-orchestrator-worker-trigger
 MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_ROLE_NAME=madara-orchestrator-worker-trigger-role
 MADARA_ORCHESTRATOR_EVENT_BRIDGE_TRIGGER_POLICY_NAME=madara-orchestrator-worker-trigger-policy
