--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -45,9 +45,6 @@ services:
     ports:
       - "9545:9545"
     command: bash -c "cargo run --bin pathfinder -- --network custom --chain-id MADARA_DEVNET --ethereum.url wss://eth-sepolia.g.alchemy.com/v2/WIUR5JUZXieEBkze6Xs3IOXWhsS840TX --gateway-url http://localhost:8080/gateway --feeder-gateway-url http://localhost:8080/feeder_gateway --storage.state-tries archive --data-directory /pathfinder/data --http-rpc 127.0.0.1:9545"
-  depends_on:
-    mock-prover:
-      condition: service_started
 
   anvil:
     build:
@@ -55,7 +52,21 @@ services:
       dockerfile: Dockerfile.anvil
     ports:
       - "8545:8545"
-    command: /bin/bash -c "anvil --block-time 1"
+    command: /bin/bash -c "anvil --host 0.0.0.0 --block-time 1"
     depends_on:
       pathfinder:
+        condition: service_started
+
+  madara:
+    build:
+      context: .
+      dockerfile: Dockerfile.madara
+    volumes:
+      - ../madara:/madara
+    ports:
+      - "9945:9945"
+      - "8080:8080"
+    command: bash -c 'cargo run --release -- --name madara --base-path madara-db --rpc-port 9945 --rpc-cors "*" --rpc-external --sequencer --chain-config-path configs/presets/devnet.yaml --feeder-gateway-enable --gateway-enable --gateway-external --gas-price 0 --blob-gas-price 0  --no-l1-sync --gateway-port 8080'
+    depends_on:
+      anvil:
         condition: service_started
