--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,13 +96,13 @@ hyper = { version = "0.14", features = ["full"] }
 mockall = "0.13.0"
 testcontainers = "0.18.0"
 once_cell = "1.8"
-appchain-core-contract-client = { git = "https://github.com/karnotxyz/zaun", branch = "main" }
+appchain-core-contract-client = { git = "https://github.com/Mohiiit/zaun", rev="878cf6fac215c260858b070f72fb52a70bf5e460" }
 crypto-bigint = { version = "0.5.5" }
 env_logger = "0.11.5"
 strum_macros = "0.26.4"
 strum = "0.26.3"
 async-std = { version = "1.13.0", features = ["attributes"] }
-
+swiftness_proof_parser = "0.1.0"
 
 # Instrumentation
 opentelemetry = { version = "0.25.0", features = ["metrics", "logs"] }
