--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ axum-macros = "0.4.1"
 bincode = "1.3.3"
 bytes = "1.7.2"
 color-eyre = "0.6.2"
-chrono = "0.4.0"
+chrono = { version = "0.4", features = ["serde"] }
 c-kzg = "1.0.3"
 dotenvy = "0.15.7"
 futures = "0.3.30"
