update: added jemallocator

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
+#### SYSTEM ####
+JEMALLOC_SYS_WITH_MALLOC_CONF="background_thread:true,narenas:1,tcache:false,dirty_decay_ms:0,muzzy_decay_ms:0,abort_conf:true"
 
 #### AWS CONFIG ####
 
