--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+#### SYSTEM ####
+JEMALLOC_SYS_WITH_MALLOC_CONF=
+
 #### AWS CONFIG ####
 AWS_ACCESS_KEY_ID=                    # Your AWS access key ID
 AWS_SECRET_ACCESS_KEY=                # Your AWS secret access key
