--- a/Cargo.toml
+++ b/Cargo.toml
@@ -130,6 +130,7 @@ cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notles
   "mod_builtin",
 ] }
 
+jemallocator = "0.5.4"
 
 # Snos & Sharp (Starkware)
 # TODO: need to update this once the updated PR merges
