--- a/.env.test
+++ b/.env.test
@@ -107,6 +107,7 @@ MADARA_ORCHESTRATOR_PORT=3000
 
 #### SERVICE ####
 
+MADARA_ORCHESTRATOR_UNIQUE_ID=orchestrator_1
 MADARA_ORCHESTRATOR_MAX_BLOCK_NO_TO_PROCESS=
 MADARA_ORCHESTRATOR_MIN_BLOCK_NO_TO_PROCESS=
 MADARA_ORCHESTRATOR_MADARA_RPC_URL=http://81.16.176.130:9545
