fix: test endpoint

--- a/.env.test
+++ b/.env.test
@@ -111,9 +111,9 @@ MADARA_ORCHESTRATOR_MAX_CONCURRENT_SNOS_JOBS=1
 MADARA_ORCHESTRATOR_UNIQUE_ID=orchestrator_1
 MADARA_ORCHESTRATOR_MAX_BLOCK_NO_TO_PROCESS=
 MADARA_ORCHESTRATOR_MIN_BLOCK_NO_TO_PROCESS=
-MADARA_ORCHESTRATOR_MADARA_RPC_URL=http://localhost:9545
+MADARA_ORCHESTRATOR_MADARA_RPC_URL=http://81.16.176.130:9545
 
 
 #### SNOS ####
 
-MADARA_ORCHESTRATOR_RPC_FOR_SNOS=http://localhost:9545
+MADARA_ORCHESTRATOR_RPC_FOR_SNOS=http://81.16.176.130:9545
