--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,19 +125,17 @@ tracing-subscriber = { version = "0.3.18", features = [
 tracing-opentelemetry = "0.26.0"
 
 # Cairo VM
-cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notlesh/snos-2024-11-04", features = [
+cairo-vm = { git = "https://github.com/Mohiiit/cairo-vm", branch = "tmp/mohit/paradex", features = [
   "cairo-1-hints",
   "extensive_hints",
   "mod_builtin",
 ] }
-
-jemallocator = "0.5.4"
-
 # Snos & Sharp (Starkware)
 # TODO: need to update this once the updated PR merges
-starknet-os = { git = "https://github.com/keep-starknet-strange/snos", branch = "tmp/snos_devnet_zero_txs" }
-prove_block = { git = "https://github.com/keep-starknet-strange/snos", branch = "tmp/snos_devnet_zero_txs" }
+starknet-os = { git = "https://github.com/Mohiiit/snos", rev = "cad469b0650eed7763e8eedaba5c445fdfd7cfa1" }
+prove_block = { git = "https://github.com/Mohiiit/snos", rev = "cad469b0650eed7763e8eedaba5c445fdfd7cfa1" }
 
+jemallocator = "0.5.4"
 # Madara prover API
 madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
 madara-prover-rpc-client = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
