chore(ci): fixing the workflow to use rustup show

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -36,10 +36,7 @@ jobs:
           sudo apt-get install -y clang llvm libudev-dev protobuf-compiler gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
+        run: rustup show
 
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
