--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly
+          override: true
 
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
