--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -109,6 +109,7 @@ jobs:
       - name: Build Madara
         working-directory: madara
         run: |
+          source "$HOME/.cargo/env"
           cargo build
           mv target/debug/madara ../madara-binary
           cd ..
