--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -110,6 +110,7 @@ jobs:
         working-directory: madara
         run: |
           source "$HOME/.cargo/env"
+          rustup toolchain install 1.81-x86_64-unknown-linux-gnu --profile minimal
           cargo build
           mv target/debug/madara ../madara-binary
           cd ..
