fix(ci): coverage workflow updated v6

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -129,7 +129,9 @@ jobs:
           make snos
 
       - name: Check rust version
-        run: rustup show
+        run: |
+          source "$HOME/.cargo/env"
+          rustup show
 
       - name: Run llvm-cov tests
         env:
