--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,11 +35,14 @@ jobs:
           sudo apt update
           sudo apt-get install -y clang llvm libudev-dev protobuf-compiler gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
 
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
+      - name: Install Rust toolchain using rustup
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source "$HOME/.cargo/env"
+          rustup toolchain install nightly-2024-09-05 --profile minimal
+          rustup default nightly-2024-09-05
+          rustup override set nightly-2024-09-05
+          rustup show
 
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
@@ -106,6 +109,8 @@ jobs:
       - name: Build Madara
         working-directory: madara
         run: |
+          source "$HOME/.cargo/env"
+          rustup toolchain install 1.81-x86_64-unknown-linux-gnu --profile minimal
           cargo build
           mv target/debug/madara ../madara-binary
           cd ..
@@ -124,7 +129,9 @@ jobs:
           make snos
 
       - name: Check rust version
-        run: rustup show
+        run: |
+          source "$HOME/.cargo/env"
+          rustup show
 
       - name: Run llvm-cov tests
         env:
@@ -132,7 +139,9 @@ jobs:
           MADARA_ORCHESTRATOR_RPC_FOR_SNOS: ${{ secrets.RPC_FOR_SNOS }}
           # the self hosted runner has a different region so we override it here
           AWS_REGION: us-east-1
-        run: RUST_LOG=debug RUST_BACKTRACE=1 cargo llvm-cov nextest --release --features testing --lcov --output-path lcov.info --test-threads=1 --workspace --exclude=e2e-tests --no-fail-fast
+        run: |
+          source "$HOME/.cargo/env"
+          RUST_LOG=debug RUST_BACKTRACE=1 cargo llvm-cov nextest --release --features testing --lcov --output-path lcov.info --test-threads=1 --workspace --exclude=e2e-tests --no-fail-fast
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
